pages and updates for graphql and seo

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,13 +2,19 @@
   margin: auto;
   padding: 1rem;
   max-width: 500px;
-  border-style: solid;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
 }
 
 .heading {
   color: rebeccapurple;
+}
+
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+  margin: 3rem 0;
 }
 
 .nav-links {
